fix: scrollbar color

--- a/src/main/resources/viewtify/dark.css
+++ b/src/main/resources/viewtify/dark.css
@@ -16,6 +16,8 @@
 
     /* make controls (buttons, thumb, etc.) slightly lighter */
     -fx-color: derive(-fx-base, 10%);
+    -fx-hover-base: derive(-fx-base, 15%);
+    -fx-pressed-base: derive(-fx-base, 20%);
 
     /* text fields and table rows background */
     -fx-control-inner-background: rgb(30, 30, 30);
