--- a/src/main/resources/viewtify/ui.css
+++ b/src/main/resources/viewtify/ui.css
@@ -137,27 +137,42 @@
 /* ==========================================================================
   ScrollBar
 ===========================================================================*/
+.scroll-bar {
+    -fx-background-color: -fx-background;
+    -fx-padding: 0.5;
+}
 .scroll-bar:vertical {
-    -fx-pref-width: 9;
+    -fx-pref-width: 12;
 }
-
 .scroll-bar:horizontal {
-    -fx-pref-height: 9;
+    -fx-pref-height: 12;
 }
-
+.scroll-bar .track {
+    -fx-background-insets: 1;
+}
 .scroll-bar .thumb {
-    -fx-background-insets: 1 1 1 1; /* flat style */
+    -fx-background-color: derive(-fx-color, -10%);
+    -fx-background-radius: 0;
+}
+.scroll-bar:vertical .thumb {
+    -fx-background-insets: 1 1 1 2;
+}
+.scroll-bar:horizontal .thumb {
+    -fx-background-insets: 2 1 1 1;
 }
 
-.scroll-bar > .thumb:pressed {
-    -fx-color: -fx-hover-base; /* same as hover color */
+/* DON'T combine horizontal and vertical declarations. It will hide the scrollbar on Table. */
+.scroll-bar:vertical .decrement-button,
+.scroll-bar:vertical .increment-button,
+.scroll-bar:vertical .decrement-arrow,
+.scroll-bar:vertical .increment-arrow {
+	-fx-pref-height: 0;
 }
-
-.scroll-bar .decrement-button,
-.scroll-bar .increment-button,
-.scroll-bar .decrement-arrow,
-.scroll-bar .increment-arrow {
-    -fx-padding: 0; /* hide */
+.scroll-bar:horizontal .decrement-button,
+.scroll-bar:horizontal .increment-button,
+.scroll-bar:horizontal .decrement-arrow,
+.scroll-bar:horizontal .increment-arrow {
+	-fx-pref-width: 0;
 }
 
 /* ==========================================================================
